--- a/index.html
+++ b/index.html
@@ -5,6 +5,46 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,500;0,900;1,700&display=swap");
+
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
+
+      body {
+        background-color: #dddee1;
+        font-size: 20px;
+        font-family: "Montserrat", sans-serif;
+        max-width: 800px;
+        margin: 0 auto;
+        padding: 3%;
+      }
+
+      img {
+        max-width: 100%;
+      }
+
+      header {
+        width: 98%;
+      }
+
+      #logo {
+        max-width: 120px;
+        margin: 3% 0 3% 3%;
+        float: left;
+      }
+
+      #wrapper {
+        background-color: #d9c1c6;
+      }
+
+      #social {
+        float: right;
+      }
+    </style>
   </head>
   <body>
     <div id="wrapper">
