--- a/index.html
+++ b/index.html
@@ -43,6 +43,33 @@
 
       #social {
         float: right;
+        margin: 3% 2% 4% 3%;
+        list-style-type: none;
+      }
+
+      #social > li {
+        display: inline;
+      }
+
+      #social > li > a > img {
+        max-width: 35px;
+      }
+
+      h1,
+      p {
+        margin: 3%;
+      }
+
+      .btn {
+        float: right;
+        margin: 0 2% 4% 0;
+        background-color: #303840;
+        color: #f6faff;
+        text-decoration: none;
+        font-weight: 800;
+        padding: 8px 12px;
+        border-radius: 8px;
+        letter-spacing: 2px;
       }
     </style>
   </head>
