--- a/index.html
+++ b/index.html
@@ -71,6 +71,21 @@
         border-radius: 8px;
         letter-spacing: 2px;
       }
+
+      hr {
+        height: 1px;
+        background-color: #303840;
+        clear: both;
+        width: 96%;
+        margin: auto;
+      }
+
+      #contact {
+        text-align: center;
+        font-size: 14px;
+        line-height: 14px;
+        padding-bottom: 3%;
+      }
     </style>
   </head>
   <body>
@@ -122,8 +137,8 @@
         <footer>
           <p id="contact">
             Code Monkey Studios <br />
-            PO Box #### <br />
-            Kansas City, MO <br />
+            P.O. Box #### <br />
+            Some City, State <br />
             codemonkeystudios@outlook.com
           </p>
         </footer>
