--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             Code Monkey Studios <br />
             P.O. Box #### <br />
             Some City, State <br />
-            codemonkeystudios@outlook.com
+            email@email.com
           </p>
         </footer>
       </div>
